--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
             <div class="cover">
                 <div class="flexbox">
-                    <h1 class="title friz-quadrata">.dewoh</h1>
-                    <img src="assets/logo-outline.svg"/>
+                    <h1 class="title friz-quadrata">.dewoh_</h1>
+                    <img src="assets/logo-outline-nobg.svg"/>
                 </div>
 
-                <div class="input">
+                <div class="input flexbox">
                     <input id="sum1-txtbox" type="text" placeholder="Summoner Name 1">
                     <input id="sum2-txtbox" type="text" placeholder="Summoner Name 2">
                     <!-- DROP DOWN MENU, LAST WEEK/MONTH/3 MONTHS/6 MONTHS/ YEAR/ ALL TIME*** where all time is whatever the api lets me -->
@@ -36,6 +36,15 @@
             <p>
                 <strong>Dewoh</strong> calculates the win rate between two summoners over time.
             </p>
+            <p>
+                Yet to implement:
+            </p>
+            <ul>
+                <li>By time (last week/month/3 months/6 months/year/all time)</li>
+                <li>Sort results by role</li>
+                <li>Sort results by champion</li>
+                <li>[ DONE ] Sort results by queue</li>
+            </ul>
         </section>
 
         <section class="results" id="dewoh-results">
