THE BAREMINIMUM WORKS ! AHA

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             </div>
 
             <!-- THREE COLUMNS, BY QUEUE, BY ROLE, BY CHAMPS (top 5) -->
+            <div id="match-history"></div>
         </section>
 
         <footer>
