summoner metadata looks nicer now

--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
         </section>
 
         <section class="results" id="dewoh-results">
-            <div id="status"></div>
-            <div id="summoner-metadata">
+            <div class="flexbox" id="summoner-metadata">
                 <!-- SUMMONER ICONS AND LEVELS -->
             </div>
+            <div class="flexbox" id="status"></div>
 
             <!-- THREE COLUMNS, BY QUEUE, BY ROLE, BY CHAMPS (top 5) -->
             <div id="match-history"></div>
