shows results by queue

--- a/index.html
+++ b/index.html
@@ -85,9 +85,17 @@
                 <!-- SUMMONER ICONS AND LEVELS -->
             </div>
             <div class="flexbox" id="status"></div>
-
+            <div id="analysis">
+                <div id="overall"></div>
+                <div id="by-queue"></div>
+                <div id="by-role"></div>
+                <div id="by-champion"></div>
+            </div>
             <!-- THREE COLUMNS, BY QUEUE, BY ROLE, BY CHAMPS (top 5) -->
             <div id="match-history"></div>
+
+            <!-- LEFT SDIE IS WINS? and show champ icons -->
+            <!-- RIGHT SIDE IS LOSSES? idk -->
         </section>
 
         <footer>
