--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <section class="description" id="dewoh-desc">
             <p>
-                <strong>Dewoh</strong> calculates the win rate between two summoners over time.
+                <strong>Dewoh</strong> calculates the win rate between two summoners over time. Basic functionality is done!
             </p>
             <p>
                 Yet to implement:
