cards for match hsitroy

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Dewoh</title>
         <link rel="icon" href="assets/logo_black.svg">
         <link rel="stylesheet" href="hayeselnut.github.io/styles.css">
+        <link rel="stylesheet" href="styles.css">
         <style>
             #dewoh-cover {
                 background-image: url("./assets/bg.jpg");
@@ -69,11 +70,7 @@
                 <li>[ DONE ] Sort results by queue</li>
             </ul>
             <p>
-                FRONTEND: HTML, CSS, Javascript
-            </p>
-
-            <p>
-                DATABASE: Firebase <----- hahaha no more
+                FRONTEND: HTML, CSS, JavaScript
             </p>
             <p>
                 PROXY: AWS Lambdas and AWS API Gateway since Riot Games API enforces server-to-server communications.
@@ -92,7 +89,7 @@
                 <div id="by-champion"></div>
             </div>
             <!-- THREE COLUMNS, BY QUEUE, BY ROLE, BY CHAMPS (top 5) -->
-            <div id="match-history"></div>
+            <div class="flexbox" id="match-history"></div>
 
             <!-- LEFT SDIE IS WINS? and show champ icons -->
             <!-- RIGHT SIDE IS LOSSES? idk -->
