show match history implemented at a basic functionality

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
                     <div class="flexbox">
                         <input id="sum1-txtbox" type="text" placeholder="Summoner Name">
                         <input id="sum2-txtbox" type="text" placeholder="Summoner Name">
-                        <select name="region" id="region">
+                        <select name="region" id="dewoh-region">
                             <option value="oc1">OCE</option>
                             <option value="br1">BR</option>
                             <option value="eun1">EUNE</option>
                             <option value="euw1">EUW</option>
-                            <option value="jp1">KR</option>
+                            <option value="jp1">JP</option>
                             <option value="kr">KR</option>
                             <option value="la1">LAN</option>
                             <option value="la2">LAS</option>
@@ -51,7 +51,7 @@
                     </div>
                     <!-- DROP DOWN MENU, LAST WEEK/MONTH/3 MONTHS/6 MONTHS/ YEAR/ ALL TIME*** where all time is whatever the api lets me -->
                     <br/>
-                    <button class="dewoh-button" id="dewoh-btn">Find games</button>
+                    <button class="dewoh-button friz-quadrata" id="dewoh-btn">Find games</button>
                 </div>
             </div>
         </header>
