--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                 <!-- SUMMONER ICONS AND LEVELS -->
             </div>
             <div class="flexbox" id="status"></div>
-            <div id="analysis">
-                <div id="overall"></div>
+            <div id="overall"></div>
+            <div class="flexbox" id="analysis">
                 <div id="by-queue"></div>
                 <div id="by-role"></div>
                 <div id="by-champion"></div>
