--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
             </p>
             <ul>
                 <li>By time (last week/month/3 months/6 months/year/all time)</li>
-                <li>Sort results by role</li>
-                <li>Sort results by champion</li>
+                <li>[ DONE-ISH ] Sort results by role (NEED TO FIND A MORE ACCURATE WAY)</li>
+                <li>[ DONE ] Sort results by champion (NOW ONLY NEED TO SHOW TOP 5)</li>
                 <li>[ DONE ] Sort results by queue</li>
             </ul>
             <p>
