order anlysis by games played

--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
                             <option value="tr1">TR</option>
                             <option value="ru">RU</option>
                         </select>
+                        <select name="timeframe" id="dewoh-timeframe">
+                            <option value="2592000000">Past 30 days</option>
+                            <option value="7889400000">Past 3 months</option>
+                            <option value="15778800000">Past 6 months</option>
+                            <option value="31557600000">Past year</option>
+                            <option value="63115200000">Past 2 years</option>
+                        </select>
                     </div>
                     <!-- DROP DOWN MENU, LAST WEEK/MONTH/3 MONTHS/6 MONTHS/ YEAR/ ALL TIME*** where all time is whatever the api lets me -->
                     <br/>
