--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                 <li>[ DONE-ISH ] Sort results by role (NEED TO FIND A MORE ACCURATE WAY)</li>
                 <li>[ DONE ] Sort results by champion (NOW ONLY NEED TO SHOW TOP 5)</li>
                 <li>[ DONE ] Sort results by queue</li>
+                <li>[ DONE ] API Key Approved :D</li>
             </ul>
             <p>
                 FRONTEND: HTML, CSS, JavaScript
